# fifa2018

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml
doc/dev/: procedure.txt  requirements_docs.txt
libs/json/: CMakeLists.txt
resources/: config.json
src/app/: CMakeLists.txt
src/app/src/: Program.cpp
src/fifa2018/: CMakeLists.txt
src/fifa2018/include/fifa2018/: Match.h  Player.h  RandomGen.h  Stage.h  Statistics.h  Team.h  Tournament.h
src/fifa2018/src/: Match.cpp  Player.cpp  RandomGen.cpp  Stage.cpp  Statistics.cpp  Team.cpp  Tournament.cpp
src/fifa2018/test/: RandomGenTest.cpp  TeamPlayerTest.cpp
